Updates commands category and HelpCmd