@@ -1,6 +1,7 @@
 package com.shadorc.shadbot.command.standalone;
 
 import com.shadorc.shadbot.core.command.*;
+import com.shadorc.shadbot.core.i18n.I18nContext;
 import com.shadorc.shadbot.data.Config;
 import com.shadorc.shadbot.database.DatabaseManager;
 import com.shadorc.shadbot.database.guilds.entity.Settings;
@@ -11,8 +12,13 @@ import discord4j.rest.util.ApplicationCommandOptionType;
 import reactor.bool.BooleanUtils;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import reactor.util.function.Tuple2;
+import reactor.util.function.Tuples;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.function.Consumer;
 
 public class HelpCmd extends BaseCmd {
@@ -36,24 +42,23 @@ public class HelpCmd extends BaseCmd {
         return context.getPermissions()
                 .collectList()
                 .flatMap(authorPermissions -> HelpCmd.getMultiMap(context, authorPermissions))
-                .map(map -> HelpCmd.formatEmbed(map, context.getAuthorAvatar()))
+                .map(map -> HelpCmd.formatEmbed(context, map, context.getAuthorAvatar()))
                 .flatMap(context::reply);
     }
 
-    private static Consumer<EmbedCreateSpec> formatEmbed(Map<CommandCategory, Collection<String>> map, String avatarUrl) {
+    private static Consumer<EmbedCreateSpec> formatEmbed(I18nContext context, Map<CommandCategory, Collection<String>> map, String avatarUrl) {
         return ShadbotUtil.getDefaultEmbed(
                 embed -> {
-                    embed.setAuthor("Shadbot Help", "https://github.com/Shadorc/Shadbot/wiki/Commands", avatarUrl);
-                    embed.setDescription(String.format("Any issues, questions or suggestions ?"
-                                    + " Join the [support server.](%s)"
-                                    + "%nI need your help to [keep Shadbot alive!](%s)",
-                            Config.SUPPORT_SERVER_URL, Config.PATREON_URL));
-                    embed.setFooter("Click on the title to get a detailed list", "https://i.imgur.com/eaWQxvS.png");
+                    embed.setAuthor(context.localize("help.title"), "https://github.com/Shadorc/Shadbot/wiki/Commands", avatarUrl);
+                    embed.setDescription(context.localize("help.description")
+                            .formatted(Config.SUPPORT_SERVER_URL, Config.PATREON_URL));
+                    embed.setFooter(context.localize("help.footer"), "https://i.imgur.com/eaWQxvS.png");
 
                     for (final CommandCategory category : CommandCategory.values()) {
-                        if (!map.getOrDefault(category, Collections.emptyList()).isEmpty()) {
-                            embed.addField(String.format("%s Commands", category.getName()),
-                                    String.join(" ", map.get(category)), false);
+                        final Collection<String> cmds = map.get(category);
+                        if (cmds != null && !cmds.isEmpty()) {
+                            embed.addField(context.localize("help.field.title").formatted(category.getName()),
+                                    String.join(" ", cmds), false);
                         }
                     }
                 });
@@ -64,7 +69,6 @@ public class HelpCmd extends BaseCmd {
                 .map(Channel::getType)
                 .map(Channel.Type.DM::equals)
                 .cache();
-
 
         final Mono<Settings> getSettings = DatabaseManager.getGuilds()
                 .getSettings(context.getGuildId())
@@ -78,9 +82,19 @@ public class HelpCmd extends BaseCmd {
                 .filter(cmd -> authorPermissions.contains(cmd.getPermission()))
                 // ... and removes commands that are not allowed by the guild
                 .filterWhen(cmd -> BooleanUtils.or(getIsDm,
-                        getSettings.map(settings -> settings.isCommandAllowed(cmd) && settings.isCommandAllowedInChannel(cmd, context.getChannelId()))
+                        getSettings.map(settings ->
+                                settings.isCommandAllowed(cmd)
+                                        && settings.isCommandAllowedInChannel(cmd, context.getChannelId()))
                                 .defaultIfEmpty(true)))
-                .collectMultimap(BaseCmd::getCategory, cmd -> String.format("`/%s`", cmd.getName()));
+                .flatMapIterable(cmd -> {
+                    if (cmd instanceof BaseCmdGroup group) {
+                        return group.getCommands().stream()
+                                .map(it -> Tuples.of(it.getCategory(), "%s %s".formatted(cmd.getName(), it.getName())))
+                                .toList();
+                    }
+                    return List.of(Tuples.of(cmd.getCategory(), cmd.getName()));
+                })
+                .collectMultimap(Tuple2::getT1, tuples -> "`/%s`".formatted(tuples.getT2()));
     }
 
     // Essential part of Shadbot (Thanks to @Bluerin)
